# chat-flock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .safety-policy.yml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  stale.yml
chatflock/: __init__.py  ai_utils.py  base.py  errors.py  parsing_utils.py  structured_string.py  utils.py
chatflock/backing_stores/: __init__.py  in_memory.py  langchain.py
chatflock/code/: __init__.py  base.py  docker.py  langchain.py  local.py
chatflock/composition_generators/: __init__.py  langchain.py
chatflock/conductors/: __init__.py  langchain.py  round_robin.py
chatflock/participants/: __init__.py  group.py  internal_group.py  langchain.py  output_parser.py  spr.py  user.py
chatflock/renderers/: __init__.py  terminal.py
chatflock/sequencial_process/: __init__.py  sequential_process.py
chatflock/use_cases/: bshr.py  request_response.py
chatflock/web_research/: __init__.py  errors.py  page_analyzer.py  search.py  web_research.py
chatflock/web_research/page_retrievers/: __init__.py  base.py  fallback.py  requests_retriever.py  scraper_api_retriever.py  selenium_retriever.py
docker/: Dockerfile  README.md
docs/: chatflock.backing_stores.rst  chatflock.code.rst  chatflock.composition_generators.rst  chatflock.conductors.rst  chatflock.participants.rst  chatflock.renderers.rst  chatflock.rst  chatflock.sequencial_process.rst  chatflock.use_cases.rst  chatflock.web_research.page_retrievers.rst  chatflock.web_research.rst  conf.py  index.md  index.rst  modules.rst  quickstart.md  requirements.txt
examples/: assistant_self_dialog.py  assistant_self_dialogue.py  automatic_chat_composition.py  automatic_chat_simple_composition.py  automatic_hierarchical_chat_composition.py  automatic_internal_group_participant.py  bshr_loop.py  chatgpt_clone.py  chatgpt_clone_with_additional_tools.py  chatgpt_clone_with_langchain_memory.py  chatgpt_clone_with_langchain_retrieval.py  manual_internal_group_participant.py  three_way_ai_conductor.py
tests/test_example/: test_hello.py
